[chromium] Font::drawComplexText can not draw a segment of text run https://bugs.webkit.org/show_bug.cgi?id=72095

Patch by Robin Cao <robin.cao@torchmobile.com.cn> on 2011-11-17
Reviewed by Adam Barth.

Source/WebCore:

drawComplexText() should respect the 'from' and 'to' arguments.
Drawing the whole text run may result in text overlapping.

Test: platform/chromium-linux/fast/text/international/draw-complex-text-from-to.html

* platform/graphics/chromium/ComplexTextControllerLinux.cpp:
(WebCore::ComplexTextController::glyphsForRange):
* platform/graphics/chromium/ComplexTextControllerLinux.h:
* platform/graphics/chromium/FontLinux.cpp:
(WebCore::Font::drawComplexText):

LayoutTests:

* platform/chromium-linux/fast/text/international/draw-complex-text-from-to-expected.png: Added.
* platform/chromium-linux/fast/text/international/draw-complex-text-from-to-expected.txt: Added.
* platform/chromium-linux/fast/text/international/draw-complex-text-from-to.html: Added.

Canonical link: https://commits.webkit.org/89217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100718 268f45cc-cd09-0410-ab3c-d52691b4dbfc